k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ope-core-web
  namespace: ope
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: ope.100.81.235.34.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ope-core
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ope-core-websecure
  namespace: ope
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: ope.100.81.235.34.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ope-core
                port:
                  number: 8080
